--- a/BarApp/Base.lproj/Main.storyboard
+++ b/BarApp/Base.lproj/Main.storyboard
@@ -638,6 +638,112 @@
             </objects>
             <point key="canvasLocation" x="2224.8000000000002" y="-32.833583208395808"/>
         </scene>
+        <!--Distributor ListVC-->
+        <scene sceneID="Usr-v3-jEX">
+            <objects>
+                <viewController id="eak-iG-9Iz" customClass="DistributorListVC" customModule="BarApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="i0L-tV-TKP"/>
+                        <viewControllerLayoutGuide type="bottom" id="JOE-5X-Vcg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KZK-Zr-WcJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="za5-ML-bvS">
+                                <items>
+                                    <navigationItem title="Distributor List" id="5B2-at-c8p">
+                                        <barButtonItem key="leftBarButtonItem" image="backButton" id="u0w-Ej-NKs">
+                                            <color key="tintColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Next" id="NaV-ra-vSI"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Distributor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZp-sc-DhU">
+                                <fontDescription key="fontDescription" name="LaoSangamMN" family="Lao Sangam MN" pointSize="16"/>
+                                <color key="textColor" red="1" green="0.83137254900000002" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O2w-ka-aH6">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="XNj-Qi-BvK"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EqC-1g-Q47">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="distCell" rowHeight="89" id="9zG-y2-S5M" customClass="DistributorListCell" customModule="BarApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="89"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9zG-y2-S5M" id="qoT-Bp-4lD">
+                                            <frame key="frameInset" width="342" height="89"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfX-ae-ysM">
+                                                    <color key="backgroundColor" red="0.63137254899999995" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="Tw8-XY-q3O"/>
+                                                    </constraints>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dist2" translatesAutoresizingMaskIntoConstraints="NO" id="6ZV-sF-kTj">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="1WS-xz-u1Q"/>
+                                                        <constraint firstAttribute="width" constant="70" id="7pL-b0-Gqm"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWt-Xt-LW2">
+                                                    <fontDescription key="fontDescription" name="LaoSangamMN" family="Lao Sangam MN" pointSize="16"/>
+                                                    <color key="textColor" red="1" green="0.83137254900000002" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="dfX-ae-ysM" secondAttribute="bottom" id="1Pd-H9-91X"/>
+                                                <constraint firstItem="iWt-Xt-LW2" firstAttribute="leading" secondItem="6ZV-sF-kTj" secondAttribute="trailing" constant="10" id="6ec-7u-4eY"/>
+                                                <constraint firstItem="dfX-ae-ysM" firstAttribute="width" secondItem="qoT-Bp-4lD" secondAttribute="width" multiplier="4:5" id="8sy-ta-hRB"/>
+                                                <constraint firstItem="6ZV-sF-kTj" firstAttribute="leading" secondItem="qoT-Bp-4lD" secondAttribute="leading" constant="8" id="AhL-VY-GIf"/>
+                                                <constraint firstItem="6ZV-sF-kTj" firstAttribute="centerY" secondItem="qoT-Bp-4lD" secondAttribute="centerY" id="C7R-II-One"/>
+                                                <constraint firstItem="dfX-ae-ysM" firstAttribute="centerX" secondItem="qoT-Bp-4lD" secondAttribute="centerX" id="J7h-Wj-OTX"/>
+                                                <constraint firstItem="iWt-Xt-LW2" firstAttribute="centerY" secondItem="qoT-Bp-4lD" secondAttribute="centerY" id="q0w-Mw-Ipc"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="distributorName" destination="iWt-Xt-LW2" id="s9s-Zk-MEd"/>
+                                            <outlet property="imgView" destination="6ZV-sF-kTj" id="uw9-sk-nAj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="eak-iG-9Iz" id="oZn-vi-98a"/>
+                                    <outlet property="delegate" destination="eak-iG-9Iz" id="jHG-uq-TVF"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="za5-ML-bvS" secondAttribute="trailing" id="7Ul-X7-Hux"/>
+                            <constraint firstItem="za5-ML-bvS" firstAttribute="leading" secondItem="KZK-Zr-WcJ" secondAttribute="leading" id="8uX-Ci-vqH"/>
+                            <constraint firstItem="EqC-1g-Q47" firstAttribute="leading" secondItem="KZK-Zr-WcJ" secondAttribute="leading" id="CXa-WF-dPl"/>
+                            <constraint firstAttribute="trailing" secondItem="EqC-1g-Q47" secondAttribute="trailing" id="J8D-s9-4uQ"/>
+                            <constraint firstItem="za5-ML-bvS" firstAttribute="top" secondItem="KZK-Zr-WcJ" secondAttribute="top" id="PJj-RV-rKZ"/>
+                            <constraint firstItem="O2w-ka-aH6" firstAttribute="width" secondItem="KZK-Zr-WcJ" secondAttribute="width" multiplier="4:5" id="UMe-6i-BGl"/>
+                            <constraint firstItem="JOE-5X-Vcg" firstAttribute="top" secondItem="EqC-1g-Q47" secondAttribute="bottom" id="Y4w-QI-lEf"/>
+                            <constraint firstItem="vZp-sc-DhU" firstAttribute="centerX" secondItem="KZK-Zr-WcJ" secondAttribute="centerX" id="c1I-Qi-I2H"/>
+                            <constraint firstItem="za5-ML-bvS" firstAttribute="height" secondItem="KZK-Zr-WcJ" secondAttribute="height" multiplier="1:10" id="cvD-6R-QNP"/>
+                            <constraint firstItem="EqC-1g-Q47" firstAttribute="top" secondItem="O2w-ka-aH6" secondAttribute="bottom" constant="8" id="dc2-qu-iVx"/>
+                            <constraint firstItem="O2w-ka-aH6" firstAttribute="centerX" secondItem="KZK-Zr-WcJ" secondAttribute="centerX" id="iWF-Nf-Ur9"/>
+                            <constraint firstItem="O2w-ka-aH6" firstAttribute="top" secondItem="vZp-sc-DhU" secondAttribute="bottom" constant="5" id="sbL-oI-d8l"/>
+                            <constraint firstItem="vZp-sc-DhU" firstAttribute="top" secondItem="za5-ML-bvS" secondAttribute="bottom" constant="8" id="wkI-MT-032"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sWW-MZ-6hY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3276" y="-397.15142428785612"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="cxR-yE-WYO">
             <objects>
@@ -794,6 +900,7 @@
                         <outlet property="profilePicImgView" destination="xAj-HH-F1w" id="V1w-6p-D7J"/>
                         <segue destination="OIp-ns-AhR" kind="presentation" identifier="goProfile" id="4CG-vL-Tjp"/>
                         <segue destination="ErX-1Z-5tQ" kind="presentation" identifier="goSettings" id="u38-Oj-azn"/>
+                        <segue destination="eak-iG-9Iz" kind="presentation" identifier="goDistributorList" id="HL0-W0-sbB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="owH-YQ-9TJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2308,6 +2415,7 @@
         <image name="backButton" width="15" height="15"/>
         <image name="country" width="50" height="50"/>
         <image name="countryCode" width="50" height="50"/>
+        <image name="dist2" width="108" height="116"/>
         <image name="email" width="50" height="50"/>
         <image name="firstName" width="50" height="50"/>
         <image name="inventoryDuration" width="50" height="50"/>
