--- a/BarApp/Base.lproj/Main.storyboard
+++ b/BarApp/Base.lproj/Main.storyboard
@@ -1794,10 +1794,10 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="79" id="2Va-61-ZMG">
-                                        <rect key="frame" x="0.0" y="28" width="1000" height="79"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2Va-61-ZMG" id="W3c-yx-5Sh">
-                                            <frame key="frameInset" width="1000" height="79"/>
+                                            <frame key="frameInset" width="375" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -1911,9 +1911,12 @@
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="17Y-zC-5TN">
                                 <items>
-                                    <navigationItem title="SignUp" id="5dz-sJ-XVQ">
+                                    <navigationItem title="Edit Profile Info" id="5dz-sJ-XVQ">
                                         <barButtonItem key="rightBarButtonItem" title="Done" id="8im-0R-xo2">
                                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <connections>
+                                                <action selector="doneButton:" destination="nZ3-rb-5OI" id="Io4-yr-iUi"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
